--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "assert": "^1.4.1",
     "body-parser": "^1.17.2",
-    "cfenv": "1.0.x",
+    "cfenv": "^1.0.4",
     "ejs": "^2.5.6",
     "express": "4.13.x",
     "mysql": "^2.13.0",
     "path": "^0.12.7",
     "q": "^1.5.0",
     "request": "^2.81.0",
-    "require": "^2.4.20"
+    "require": "^2.4.20",
+    "util": "^0.10.3"
   },
   "repository": {},
   "engines": {
